top pick image and website title change

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FlipSide24 - The Other Side Of The Story</title>
+  <title>FlipSide24 - The Other Side Of The News</title>
   <meta name="description"
     content="FlipSide24 delivers accurate, unbiased news coverage from Bangladesh and around the world. Breaking news, exclusive investigations, fact-checks, and in-depth analysis." />
   <meta name="author" content="FlipSide24" />
   <meta name="keywords"
     content="Bangladesh news, Dhaka news, breaking news, politics, economy, sports, entertainment, fact-check, exclusive" />
 
-  <meta property="og:title" content="FlipSide24 - The Other Side Of The Story" />
+  <meta property="og:title" content="FlipSide24 - The Other Side Of The News" />
   <meta property="og:description"
     content="FlipSide24 delivers accurate, unbiased news coverage from Bangladesh and around the world. Breaking news, exclusive investigations, fact-checks, and in-depth analysis." />
   <meta property="og:type" content="website" />
@@ -22,7 +22,7 @@
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@FlipSide24" />
-  <meta name="twitter:title" content="FlipSide24 - The Other Side Of The Story" />
+  <meta name="twitter:title" content="FlipSide24 - The Other Side Of The News" />
   <meta name="twitter:description"
     content="FlipSide24 delivers accurate, unbiased news coverage from Bangladesh and around the world." />
   <meta name="twitter:image" content="https://flipside24.com/og-image.png" />
@@ -39,7 +39,7 @@
       "name": "FlipSide24",
       "url": "https://flipside24.com",
       "logo": "https://flipside24.com/logo.png",
-      "description": "Bangladesh's independent news platform delivering accurate, unbiased journalism.",
+      "description": "The Other Side Of The News.",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "277/5, Elephant Road, Katabon Dhal",
